--- a/sass/pages/_doctor-single.scss
+++ b/sass/pages/_doctor-single.scss
@@ -130,6 +130,11 @@
         @include xl {
             gap: 48px;
         }
+        .skill-progress-wrapper{
+            .elementor-container{
+                gap: 236px;
+            }
+        }
     }
     .elementor-widget-wrap{
         @include sm{
